<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant Finder</string>
    <string name="action_settings">Settings</string>
    <string name="title">Find your restaurant</string>
    <string name="resName">Name</string>
    <string name="resCountry">Country</string>

    <string-array name="countries">
        <item>Chose a country</item>
        <item>Spain</item>
        <item>Portugal</item>
        <item>France</item>
        <item>Germany</item>
        <item>Italy</item>
        <item>China</item>
        <item>Russia</item>
        <item>Japan</item>
        <item>Finland</item>
        <item>Norway</item>
    </string-array>
    <string-array name="nationalities">
        <item>From any country</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Japanese</item>
        <item>American</item>
        <item>Mexican</item>
    </string-array>

    <string name="spinnerPrompt">Chose a country</string>
    <string name="typeFieldName">Choose type</string>

    <string-array name="typeFieldArray">
        <item>Any type of food</item>
        <item>Traditional</item>
        <item>Creative</item>
    </string-array>

    <string name="country">Country</string>
    <string name="price">Price</string>
    <string name="priceText">Price: Any price</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="road">Road</string>
    <string name="number">Number</string>
    <string name="noNumber">S/N</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="title_activity_results">Results</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="tipeOfRoad">
        <item>Type of road</item>
        <item>Passage</item>
        <item>Road</item>
        <item>Avenue</item>
        <item>Road</item>
    </string-array>

    <string name="title_activity_description">Description</string>
    <string name="type">Type of food</string>
    <string name="nationality">Nationality</string>

</resources>