<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/resName"
        android:inputType="text" />

    <EditText
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/countryText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/countryText"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/city" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/countryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/nameText"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/country" />

    <CheckBox
        android:id="@+id/roadCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/cityText"
        android:layout_below="@+id/cityText"
        android:layout_marginTop="14dp"
        android:text="@string/road" />

    <EditText
        android:id="@+id/streetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/countryText"
        android:layout_alignTop="@+id/roadCheckbox"
        android:layout_toLeftOf="@+id/roadCheckbox"
        android:ems="10"
        android:hint="@string/street" />

    <EditText
        android:id="@+id/numberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/streetText"
        android:layout_alignRight="@+id/streetText"
        android:layout_below="@+id/streetText"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/noNumberCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/roadCheckbox"
        android:layout_alignTop="@+id/numberText"
        android:text="@string/noNumber" />

    <Spinner
        android:id="@+id/typesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numberText"
        android:layout_below="@+id/numberText"
        android:layout_marginTop="20dp"
        android:entries="@array/typeFieldArray"
        android:prompt="@string/typeFieldName" />

    <Spinner
        android:id="@+id/nationalitiesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/typesSpinner"
        android:layout_below="@+id/typesSpinner"
        android:layout_marginTop="15dp"
        android:entries="@array/nationalities" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/search" />

    <EditText
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nationalitiesSpinner"
        android:layout_below="@+id/nationalitiesSpinner"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

</RelativeLayout>
